bug76116, can not show skill when the list is too long.
bug76116, can not show skill when the list is too long.

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/WFM/css/_teamschedule.scss
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/WFM/css/_teamschedule.scss
@@ -1098,6 +1098,10 @@ note-editor {
 		font-size: 60px !important;
 	}
 
+	.nodata {
+		height: 200px;
+	}
+
 	.skills-row {
 		flex-direction: row;
 
